<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#666666">

    <item
        android:id="@+id/action_players"
        android:enabled="true"
        android:icon="@drawable/ic_action_players"
        android:title="@string/players"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_spells"
        android:enabled="true"
        android:icon="@drawable/ic_action_spells"
        android:title="@string/spells"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_items"
        android:enabled="true"
        android:icon="@drawable/ic_action_spells"
        android:title="@string/items"
        app:showAsAction="ifRoom" />

</menu>